-Aplicado diseño a todas las páginas (el header) -Barra de navegacion aplicado el diseño según referencia.

--- a/peliculas.html
+++ b/peliculas.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Peliculas</title>
+    <title>FlickHub - Peliculas</title>
 </head>
 
 <body>
 
+    <p id="titulo">FlickHub</p>
 
-    <header>
+    <header class="contenedor-negro">
         <ul>
             <a href="index.html">Inicio</a>
             <a href="series.html">Series</a>
