--- a/series.html
+++ b/series.html
@@ -1,20 +1,25 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Series</title>
+    <title>FlickHub - Series</title>
 </head>
-<body>
-    
 
-    <header></header>
-<ul>
-    <a href="index.html">Inicio</a>
-    <a href="series.html">Series</a>
-    <a href="peliculas.html">Peliculas</a>
-    <a href="contactanos.html">Contactanos</a>
-</ul>
+<body>
+
+
+    <header class="contenedor-negro">
+        <ul>
+            <a href="index.html">Inicio</a>
+            <a href="series.html">Series</a>
+            <a href="peliculas.html">Peliculas</a>
+            <a href="contactanos.html">Contactanos</a>
+        </ul>
+    </header>
+
 
 </body>
+
 </html>
