--- a/contactanos.html
+++ b/contactanos.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Contactanos</title>
+    <title>FlickHub - Contactanos</title>
 </head>
 
 <body>
 
 
-    <header>
+    <header class="contenedor-negro">
         <ul>
             <a href="index.html">Inicio</a>
             <a href="series.html">Series</a>
