-Añadido el título de la página -Aplicado uniforme de diseño en las 4 páginas.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
     <header class="contenedor-negro">
+
+        <div id="titulo">FlickHub</div>
         <ul>
             <a href="index.html">Inicio</a>
             <a href="series.html">Series</a>
