--- a/peliculas.html
+++ b/peliculas.html
@@ -10,9 +10,9 @@
 
 <body>
 
-    <p id="titulo">FlickHub</p>
-
     <header class="contenedor-negro">
+
+        <div id="titulo">FlickHub</div>
         <ul>
             <a href="index.html">Inicio</a>
             <a href="series.html">Series</a>
