--- a/contactanos.html
+++ b/contactanos.html
@@ -10,8 +10,9 @@
 
 <body>
 
+<header class="contenedor-negro">
 
-    <header class="contenedor-negro">
+        <div id="titulo">FlickHub</div>
         <ul>
             <a href="index.html">Inicio</a>
             <a href="series.html">Series</a>
