Aplicados ambos footers en las páginas para mantener diseño.

--- a/peliculas.html
+++ b/peliculas.html
@@ -21,6 +21,20 @@
         </ul>
     </header>
 
+    <div id="semi-footer">
+        <ul id="lista-pie-pagina">
+            <a href="index.html">Inicio</a>
+            <a href="series.html">Series</a>
+            <a href="peliculas.html">Peliculas</a>
+            <a href="contactanos.html">Contactanos</a>
+        </ul>
+    </div>
+
+
+    <footer>
+        Copyright ©2026 FlickHub. Designed by Félix José Toribio Regalado
+    </footer>
+
 </body>
 
 </html>
