--- a/series.html
+++ b/series.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +11,7 @@
 <body>
 
 
-   <header class="contenedor-negro">
+    <header class="contenedor-negro">
 
         <div id="titulo">FlickHub</div>
         <ul>
@@ -20,6 +21,20 @@
             <a href="contactanos.html">Contactanos</a>
         </ul>
     </header>
+
+    <div id="semi-footer">
+        <ul id="lista-pie-pagina">
+            <a href="index.html">Inicio</a>
+            <a href="series.html">Series</a>
+            <a href="peliculas.html">Peliculas</a>
+            <a href="contactanos.html">Contactanos</a>
+        </ul>
+    </div>
+
+
+    <footer>
+        Copyright ©2026 FlickHub. Designed by Félix José Toribio Regalado
+    </footer>
 
 
 </body>
