--- a/peliculas.html
+++ b/peliculas.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d42cd7ebcb.js" crossorigin="anonymous"></script>
     <title>FlickHub - Peliculas</title>
 </head>
 
@@ -12,16 +13,24 @@
 
     <header class="contenedor-negro">
 
-        <div id="titulo">FlickHub</div>
+        <div id="titulo"><i class="fas fa-film"></i>FlickHub</div>
         <ul>
-            <a href="index.html">Inicio</a>
-            <a href="series.html">Series</a>
-            <a href="peliculas.html">Peliculas</a>
-            <a href="contactanos.html">Contactanos</a>
+            <a href="index.html"><i class="fas fa-home"></i>Inicio</a>
+            <a href="series.html"><i class="fas fa-tv"></i>Series</a>
+            <a href="peliculas.html"><i class="fas fa-film"></i>Peliculas</a>
+            <a href="contactanos.html"><i class="fas fa-envelope"></i>Contactanos</a>
         </ul>
     </header>
 
     <div id="semi-footer">
+
+
+        <div class="iconos-redes">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-x-twitter"></i>
+        </div>
+
         <ul id="lista-pie-pagina">
             <a href="index.html">Inicio</a>
             <a href="series.html">Series</a>
