Diseño convertido en el index para que sea acomo un grid.

--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
 
 
     <main class="multimedia-items">
-
-        <img src="" alt="">
-
-
-
-
+        <img src="imagenes/series/BM.jpg" alt="Black Mirror">
+        <img src="imagenes/peliculas/Avatar.jpg" alt="Avatar">
+        <img src="imagenes/series/breaking bad.jpg" alt="Breaking Bad">
+        <img src="imagenes/peliculas/Batman.jpg" alt="Batman">
+        <img src="imagenes/series/DBS.jpg" alt="Dragon Ball Super">
+        <img src="imagenes/series/futurama.jpg" alt="Futurama">
+        <img src="imagenes/peliculas/Como entrenar a tu dragon.jpg" alt="CEAD">
+        <img src="imagenes/peliculas/el padrino.jpg" alt="El Padrino">
+        <img src="imagenes/series/invincible.jpg" alt="invencible">
+        <img src="imagenes/series/NACIONZ.jpg" alt="">
+        <img src="imagenes/peliculas/Tron Ares.jpeg" alt="TRON3">
+        <img src="imagenes/peliculas/Super Mario Bros.jpg" alt="Mario Bros">
     </main>
-
-
-
 
     <div id="semi-footer">
 
