-Ajustado diseño para que peliculas y series coincida con index.

--- a/series.html
+++ b/series.html
@@ -23,6 +23,24 @@
         </ul>
     </header>
 
+
+    <main class="multimedia-items">
+        <img src="imagenes/series/BM.jpg" alt="Black Mirror">
+        <img src="imagenes/series/vikings.jpg" alt="Vikings">
+        <img src="imagenes/series/breaking bad.jpg" alt="Breaking Bad">
+        <img src="imagenes/series/DBS.jpg" alt="Dragon Ball Super">
+        <img src="imagenes/series/futurama.jpg" alt="Futurama">
+        <img src="imagenes/series/invincible.jpg" alt="invencible">
+        <img src="imagenes/series/NACIONZ.jpg" alt="NacionZ">
+        <img src="imagenes/series/lucyfer.jpg" alt="Lucifer">
+        <img src="imagenes/series/peacemaker.jpg" alt="Peacemaker">
+        <img src="imagenes/series/southpark.jpg" alt="South Park">
+        <img src="imagenes/series/the boys.jpg" alt="Boys">
+        <img src="imagenes/series/TheOffice.jpg" alt="Office">
+
+        
+    </main>
+
     <div id="semi-footer">
 
         <div class="iconos-redes">
