--- a/peliculas.html
+++ b/peliculas.html
@@ -22,6 +22,23 @@
         </ul>
     </header>
 
+    <main class="multimedia-items">
+        
+        <img src="imagenes/peliculas/Avatar.jpg" alt="Avatar">
+        <img src="imagenes/peliculas/Batman.jpg" alt="Batman">
+        <img src="imagenes/peliculas/Como entrenar a tu dragon.jpg" alt="CEAD">
+        <img src="imagenes/peliculas/el padrino.jpg" alt="El Padrino">
+        <img src="imagenes/peliculas/Tron Ares.jpeg" alt="TRON3">
+        <img src="imagenes/peliculas/Super Mario Bros.jpg" alt="Mario Bros">
+        <img src="imagenes/peliculas/F4.jpg" alt="F4">
+        <img src="imagenes/peliculas/jurassic park.jpg" alt="Jurassic Park">
+        <img src="imagenes/peliculas/pulp fiction.jpg" alt="Pulp Fiction">
+        <img src="imagenes/peliculas/soy leyenda.jpg" alt="Legend">
+        <img src="imagenes/peliculas/Star Wars.jpg" alt="Star Wars">
+        <img src="imagenes/peliculas/Tron Legacy.jpg" alt="`Tron2">
+
+    </main>
+
     <div id="semi-footer">
 
 
