--- a/contactanos.html
+++ b/contactanos.html
@@ -22,6 +22,37 @@
         </ul>
     </header>
 
+
+    <section id="grid-contacto">
+        <form class="formulario-grid">
+            <h1>Contactanos</h1>
+
+            <div class="field-group">
+                <label for="correo">Correo:</label>
+                <input type="email" id="correo">
+            </div>
+
+            <div class="field-group">
+                <label for="celular">Celular:</label>
+                <input type="text" id="celular">
+            </div>
+
+            <div class="field-group">
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje"></textarea>
+            </div>
+
+            <button type="submit" class="btn-enviar">Enviar</button>
+        </form>
+
+        <div class="mapa-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d530.9689326738883!2d-69.93975586472253!3d18.469316878185513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sdo!4v1772245679353!5m2!1ses-419!2sdo"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+
     <div id="semi-footer">
 
         <div class="iconos-redes">
